# map-xxhash

./: .gitignore  CMakeLists.txt  Makefile  README.md  map.c  map.h  test.c
.github/workflows/: ci.yml
test/: test_functional.c  test_perf.c
